--- a/Softwave/fiveBBS/fiveBBS.ioc
+++ b/Softwave/fiveBBS/fiveBBS.ioc
@@ -11,7 +11,7 @@ CAD.provider=
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103VET6
 Mcu.Family=STM32F1
@@ -24,21 +24,24 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F103V(C-D-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB5
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin13=VP_SYS_VS_tim1
-Mcu.Pin2=OSC_IN
-Mcu.Pin3=OSC_OUT
-Mcu.Pin4=PC1
-Mcu.Pin5=PB0
-Mcu.Pin6=PB1
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB5
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin16=VP_SYS_VS_tim1
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin3=OSC_IN
+Mcu.Pin4=OSC_OUT
+Mcu.Pin5=PC1
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103VETx
@@ -46,6 +49,8 @@ MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -65,6 +70,16 @@ OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
+PA1.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.Locked=true
+PA1.Signal=GPXTI1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
@@ -81,6 +96,10 @@ PB5.Locked=true
 PB5.Signal=GPIO_Output
 PC1.Locked=true
 PC1.Signal=ADCx_IN11
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Input
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -147,6 +166,10 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -154,3 +177,4 @@ VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
+rtos.0.ip=FREERTOS
