--- a/Softwave/fiveBBS/fiveBBS.ioc
+++ b/Softwave/fiveBBS/fiveBBS.ioc
@@ -49,8 +49,6 @@ MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.EXTI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -70,16 +68,10 @@ OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPXTI0
-PA1.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PA1.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.Signal=GPIO_Input
 PA1.Locked=true
-PA1.Signal=GPXTI1
+PA1.Signal=GPIO_Input
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
@@ -97,7 +89,7 @@ PB5.Signal=GPIO_Output
 PC1.Locked=true
 PC1.Signal=ADCx_IN11
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd
-PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_NOPULL
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Input
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -166,10 +158,6 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
-SH.GPXTI1.0=GPIO_EXTI1
-SH.GPXTI1.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
