--- a/Softwave/fiveBBS/fiveBBS.ioc
+++ b/Softwave/fiveBBS/fiveBBS.ioc
@@ -8,29 +8,39 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=USART1_RX
+Dma.RequestsNb=1
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.0.Instance=DMA1_Channel5
+Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.ClockSpeed=400000
-I2C1.DutyCycle=I2C_DUTYCYCLE_2
-I2C1.I2C_Mode=I2C_Fast
-I2C1.IPParameters=ClockSpeed,I2C_Mode,DutyCycle
 KeepUserPlacement=false
 Mcu.CPN=STM32F103VET6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
-Mcu.IP1=FREERTOS
-Mcu.IP10=USB
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SDIO
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=USART1
-Mcu.IP9=USART3
-Mcu.IPNb=11
+Mcu.IP1=CRC
+Mcu.IP10=USART1
+Mcu.IP11=USART3
+Mcu.IP12=USB
+Mcu.IP13=WWDG
+Mcu.IP2=DMA
+Mcu.IP3=FREERTOS
+Mcu.IP4=I2C1
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SDIO
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=14
 Mcu.Name=STM32F103V(C-D-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -54,25 +64,29 @@ Mcu.Pin24=PC10
 Mcu.Pin25=PC11
 Mcu.Pin26=PC12
 Mcu.Pin27=PD2
-Mcu.Pin28=PB5
-Mcu.Pin29=PB6
+Mcu.Pin28=PB3
+Mcu.Pin29=PB5
 Mcu.Pin3=OSC_IN
-Mcu.Pin30=PB7
-Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin32=VP_SYS_VS_tim1
+Mcu.Pin30=PB6
+Mcu.Pin31=PB7
+Mcu.Pin32=VP_CRC_VS_CRC
+Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin34=VP_SYS_VS_tim1
+Mcu.Pin35=VP_WWDG_VS_WWDG
 Mcu.Pin4=OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA5
-Mcu.PinsNb=33
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103VETx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -88,6 +102,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
@@ -103,9 +118,9 @@ PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
 PA12.Signal=USB_DP
-PA13.Mode=Serial_Wire
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
@@ -123,6 +138,8 @@ PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB3.Mode=Trace_Asynchronous_SW
+PB3.Signal=SYS_JTDO-TRACESWO
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.Locked=true
@@ -191,39 +208,40 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USB_PCD_Init-USB-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,12-MX_WWDG_Init-WWDG-false-HAL-true
 RCC.ADCFreqValue=12000000
-RCC.ADCPresc=RCC_ADCPCLK2_DIV4
-RCC.AHBFreq_Value=48000000
+RCC.ADCPresc=RCC_ADCPCLK2_DIV6
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=24000000
-RCC.APB1TimFreq_Value=48000000
-RCC.APB2Freq_Value=48000000
-RCC.APB2TimFreq_Value=48000000
-RCC.FCLKCortexFreq_Value=48000000
-RCC.FSMCFreq_Value=48000000
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
+RCC.FSMCFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=48000000
-RCC.I2S2Freq_Value=48000000
-RCC.I2S3Freq_Value=48000000
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FSMCFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=48000000
-RCC.PLLCLKFreq_Value=48000000
-RCC.PLLMCOFreq_Value=24000000
-RCC.PLLMUL=RCC_PLL_MUL6
+RCC.HCLKFreq_Value=72000000
+RCC.I2S2Freq_Value=72000000
+RCC.I2S3Freq_Value=72000000
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FSMCFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.SDIOFreq_Value=48000000
-RCC.SDIOHCLKDiv2FreqValue=24000000
-RCC.SYSCLKFreq_VALUE=48000000
+RCC.SDIOFreq_Value=72000000
+RCC.SDIOHCLKDiv2FreqValue=36000000
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=48000000
+RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
+RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=12.0 MBits/s
+SPI1.CalculateBaudRate=18.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CRCCalculation
 SPI1.Mode=SPI_MODE_MASTER
@@ -232,9 +250,13 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_WWDG_VS_WWDG.Mode=WWDG_Activate
+VP_WWDG_VS_WWDG.Signal=WWDG_VS_WWDG
 board=custom
 rtos.0.ip=FREERTOS
